added Github Store and action

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,1 +1,10 @@
 /* Main.css */
+
+img {
+    width: 128px;
+    height: 128px;
+}
+ul {
+    display: inline-block;
+    vertical-align: middle;
+}
